testsuite/tests/patsyn/should_fail/T9161-1.hs
{-# LANGUAGE PatternSynonyms #-}
{-# LANGUAGE DataKinds #-}

module Bug where

pattern PATTERN = ()

wrongLift :: PATTERN
wrongLift = undefined
